2012-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/aggregate.pm, perl/Amanda/Changer/disk.pm,
	  perl/Amanda/Changer/multi.pm,
	  perl/Amanda/Changer/robot.pm: Add LOCK-TIMEOUT property.
	* perl/Amanda/Changer.pm: Handle lock-timeout property.
	* man/xml-source/amanda-changers.7.xml: Document new LOCK-TIMEOUT
	  properties.

2012-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Password can be encoded.

2012-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Do not print failure for config
	  setting.
	* perl/Amanda/Taper/Worker.pm: Send TAPE-CONFIG.
	* server-src/amflush.c: Do not add L_DISK if nothing to flush.
	* server-src/amstatus.pl: Parse TAPE-CONFIG and print appropriate
	  message.
	* server-src/driver.c: Parse TAPE-CONFIG.
	* installcheck/taper.pl: Check new TAPE-CONFIG in protocol.
	* installcheck/catalogs/amflush.cat: Fix for new format.

2012-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Add 'OAUTH2' and 'CASTOR' for
	  value of the storage-api property.

2012-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/event.c: Disable -Wmissing-field-initializers when using
	  G_STATIC_MUTEX_INIT because of warning with glib-2.32.

2012-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amfetchdump.8.xml: Document --extract, --directory,
	  --data-path and --application-property.

2012-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/event.c: Use a GStaticMutex.

2012-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: Use a GStaticMutex.

2012-10-24  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Fix count.

2012-10-23  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: Use event_create and event_activate.
	  Create static notify_data_t.

2012-10-23  Jean-Louis Martineau <martineau@zmanda.com>