@@ -1,3 +1,8 @@
+2012-11-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/bsd-security.c (stream_read_callback): Do not cancel the
+	  event in case of successful read.
+	* common-src/security-util.c: Typo.
+
 2012-11-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/aggregate.pm, perl/Amanda/Changer/disk.pm,
 	  perl/Amanda/Changer/multi.pm,
